Updated Developer Fundamentals training (#681)
* Edits for training paths, fixing weird casing

* Edits to Developer Fundamentals path

* Edits to Validator Fundamentals path

* Applying the variable where it was forgotten

* More edits to paths

* More edits to paths x2

* Modifying Makefile to make copy of new notebooks

* Pulled in latest from validmind-library

* Updated template for course registration

* Updated the Developer Fundamentals registration

* Adjusting the bullets for dev

* Draft for developer module 1

* Developer Fundamentals - Intro draft

* Developer Fundamentals - Register model draft

* Developer Fundamentals - Module 1 draft

* Removed extra drop-down menu from training

* Updated JH links

* Set up for Learning to run tests

* Learning to run tests - Explore tests draft

* Learning to run tests - Explore tests edits

* Learning to run tests - Run ValidMind tests draft

* Tweaking text size

* Learning to run tests - Log Validind tests draft

* Learning to run tests - draft

* Implementing custom tests — P1 draft

* Implementing custom tests — P2 setup

* Implementing custom tests — Draft done

* Finalizing model documentation set up

* Finalizing model documentation — Refine model documentation draft

* Finalizing model documentaiton - Submit for approval

* Finalizing model documentaiton - draft done

* Edited link to JH on landing

* Finetuning learning paths

* Editing Using VM for model dev

* Editing Learning 2 run tests

* Editing Implementing custom tests

* Editing Finalizing model documentation

* Editing the API ref .html links to .qmd

* Prereq cleanup

* Get your code snippet workaround

* Using VM for model development register model edit

* Updated the course template

* Tweaking Before you start

* Tested & updated run times

* Updated the est. for the listings

* Updated historical test result metadata

* ?? Why is the filter not working

* Getting rid of more conditions to check

* Changing env > vars for ENABLE_DEMO_NOTEB

--- a/site/guide/model-documentation/work-with-test-results.qmd
+++ b/site/guide/model-documentation/work-with-test-results.qmd
@@ -43,11 +43,7 @@ Once generated via the {{< var validmind.developer >}}, view and add the test re
 
 ## View test result metadata
 
-After you have added a test result to your document, you can view the following information attached to the result:
-
-- History of values for the result
-- What users wrote those results
-- Relevant inputs associated with the result
+{{< include /guide/model-documentation/_test-result-metadata.qmd >}}
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
@@ -55,14 +51,7 @@ After you have added a test result to your document, you can view the following 
 
 3. In the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**, **{{< fa shield >}} Validation Report**, or **{{< fa desktop >}} Ongoing Monitoring**.
 
-4. Locate the test result whose metadata you want to view. 
-
-5. Under the test result's name, click on the row indicating the currently [Active]{.green-bg} test result.
-
-    - On the test result timeline, click on the **{{< fa chevron-down >}}** associated with a test run to expand for details.
-    - When you are done, you can either click **Cancel** or **{{< fa x >}}** to close the metadata menu.
-
-    ![Detail expansion of test runs on the test result timeline](test-run-details.gif){width=85% fig-alt="A gif showcasing detail expansion of test runs on the test result timeline" .screenshot}
+{{< include /guide/model-documentation/_view-test-result-metadata.qmd >}}
 
 #### Filter historical test results
 
