--- a/site/training/administrator-fundamentals/administrator-fundamentals-register.qmd
+++ b/site/training/administrator-fundamentals/administrator-fundamentals-register.qmd
@@ -6,7 +6,12 @@ aliases:
   - training-for-administrators.html
 ---
 
-As an administrator who is new to {{< var vm.product >}}, learn how to onboard your organization, manage users and roles, and manage permissions for specific roles. 
+Learn how to use {{< var vm.product >}} as an **administrator** to onboard your organization, manage users, roles, and permissions, and customize the {{< var vm.platform >}} for your institution's requirements.
+
+::: {.column-margin}
+{{< include /training/_compatibility.qmd >}}
+
+:::
 
 <!-- COURSE CARD -->
 ::: {.attn}
