--- a/site/training/developer-fundamentals/developer-fundamentals-register.qmd
+++ b/site/training/developer-fundamentals/developer-fundamentals-register.qmd
@@ -4,9 +4,48 @@ subtitle: For {{< var vm.product >}}
 date: last-modified
 aliases: 
   - training-for-model-developers.html
+listing:
+  - id: developer-modules
+    type: grid
+    grid-columns: 2
+    max-description-length: 500
+    sort: false
+    table-hover: true
+    image-align: left
+    contents:
+    - path: using-validmind-for-model-development.html
+      title: "Using {{< var vm.product >}} for Model Development"
+      subtitle: "Module 1"
+      description: "{{< fa check >}} Register a model in the {{< var validmind.platform >}} <br> {{< fa check >}} Install the {{< var validmind.developer >}} in your environment <br> {{< fa check >}} Connect to your registered model <br> {{< fa check >}} Preview your model's documentation template"
+      reading-time: "15"
+      author: "{{< var vm.product >}}"
+    - path: learning-to-run-tests.html
+      title: "Learning to Run Tests"
+      subtitle: "Module 2"
+      description: "{{< fa check >}} Identify relevant tests to run from {{< var vm.product >}}'s test vault <br> {{< fa check >}} Initialize datasets & models for use with the {{< var validmind.developer >}} <br> {{< fa check >}} Run and log out-of-the-box tests for new and existing models <br> {{< fa check >}} Insert test results into your model's documentation"
+      reading-time: "45"
+      author: "{{< var vm.product >}}"
+    - path: implementing-custom-tests.html
+      title: "Implementing Custom Tests"
+      subtitle: "Module 3"
+      description: "{{< fa check >}} Implement, run, and log custom inline and reusable tests <br> {{< fa check >}} Refresh your template to include inserted test-driven blocks <br> {{< fa check >}} Configure your template to include custom tests"
+      reading-time: "45"
+      author: "{{< var vm.product >}}"
+    - path: finalizing-model-documentation.html
+      title: "Finalizing Model Documentation"
+      subtitle: "Module 4"
+      description: "{{< fa check >}} Refine your model documentation <br> {{< fa check >}} Submit your model documentation for approval <br> {{< fa check >}} Track changes and other updates to your model"
+      reading-time: "20"
+      author: "{{< var vm.product >}}"
+    fields: [title, subtitle, description, reading-time]
 ---
 
-As a developer who is new to {{< var vm.product >}}, learn how to generate model documentation, add your own tests, edit the content, and then submit your documentation for approval.
+Learn how to use {{< var vm.product >}} as a **developer** to generate model documentation, automate testing, and track your model's progress through the model lifecycle.
+
+::: {.column-margin}
+{{< include /training/_compatibility.qmd >}}
+
+:::
 
 <!-- COURSE CARD -->
 ::: {.attn}
@@ -15,45 +54,24 @@ As a developer who is new to {{< var vm.product >}}, learn how to generate model
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-50-ns .pr3}
-### Learn how to
+#### Total duration
 
-#### Part 1
-
-- Initialize the {{< var validmind.developer >}}
-- Start the model development process
-- Edit model documentation
-- Collaborate with others
-
-#### Part 2
-
-- Train a model
-- Implement custom tests and integrate external test providers
-- Finalize testing and documentation
-
-#### Part 3
-
-- View documentation activity
-- Submit for approval
+120 minutes
 
 :::
 
-::: {.w-50-ns .pa3}
+::: {.w-50-ns .pa3 .tr}
 
-::: {.preview source="developer-fundamentals.qmd"}
-:::
-
-#### Duration 
-
-100 minutes
-
-[register](#register){.button-green .cta}
+[register now](#register){.button-green .cta}
 
 :::
 
 ::::
 
+:::{#developer-modules}
 :::
 
+:::
 
 {{< include /training/_training-register.qmd >}}
 
