--- a/site/training/program/learning-paths.qmd
+++ b/site/training/program/learning-paths.qmd
@@ -16,60 +16,39 @@ Develop role-based expertise for your entire organization.
 
 ### Developer Fundamentals
 
-As a developer who is new to ValidMind, learn how to generate model documentation, add your own tests, edit the content, and then submit your documentation for approval.
-
-::: {.attn .hidden}
 :::: {.flex .flex-wrap .justify-around}
 
-::: {.w-30-ns}
-{{< fa check >}} **Course content**
+::: {.w-80-ns}
+Learn how to use {{< var vm.product >}} as a **developer** to generate model documentation, automate testing, and track your model's progress through the model lifecycle.
 
-- Split 3 modules -> 4 modules
-- Expand process overview content
-- Expand template content to include editing templates and adding tests
-- Rename "Module 2: Start Documenting & Testing" to "Module 2: Start Documenting"
-- Add missing content for "Register a model" in Module 1
 :::
 
-::: {.w-30-ns}
-{{< fa check >}} **Videos **
+::: {.w-20-ns .tc}
+[register now](/training/developer-fundamentals/developer-fundamentals-register.qmd){.button-green .cta target="_blank"}
 
-- 10 videos
-- Minor update to collaboration video (multi-person comment threads)
-:::
-
-::: {.w-30-ns .pl4 .bl}
-**Notes**
-
-- FUTURE: 1 intro notebook -> 4 notebooks that progressively build on each other
 :::
 
 ::::
-:::
 
 ::: {.attn}
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-50-ns}
-#### <sup>Module 1</sup><br> Initialize the ValidMind Library
+#### <sup>Module 1</sup><br> Using {{< var vm.product >}} for Model Development
 
-- Install the ValidMind Library <!-- {{< fa check >}} -->
-- Initialize your development environment <!-- {{< fa check >}} -->
-- Register a model <!-- {{< fa minus >}} -->
-- Get your code snippet <!-- {{< fa check >}} -->
-- Work with documentation templates <!-- {{< fa minus >}} -->
+- Register a model in the {{< var validmind.platform >}}
+- Install the {{< var validmind.developer >}} in your environment
+- Connect to your registered model
+- Preview your model's documentation template
 :::
 
 ::: {.w-50-ns}
-#### <sup>Module 2</sup><br> Start Documenting & Testing
+#### <sup>Module 2</sup><br> Learning to Run Tests
 
-- Initialize your datasets <!-- {{< fa check >}} -->
-- Run tabular data tests <!-- {{< fa check >}} -->  
-- Utilize test output <!-- {{< fa check >}} -->
-- Document results based on datasets <!-- {{< fa check >}} -->
-- Test your model <!-- {{< fa check >}} -->
-<!-- - Initialize model evaluation objects and assigning predictions  -->
-- Run the model evaluation tests <!-- {{< fa check >}} -->
+- Identify relevant tests to run from {{< var vm.product >}}'s test vault
+- Initialize datasets & models for use with the {{< var validmind.developer >}}
+- Run and log out-of-the-box tests for new and existing models
+- Insert test results into your model's documentation
 :::
 
 ::::
@@ -77,22 +56,19 @@ As a developer who is new to ValidMind, learn how to generate model documentatio
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-50-ns}
-#### <sup>Module 3</sup><br> Implement Custom Tests
+#### <sup>Module 3</sup><br> Implementing Custom Tests
 
-- Create a confusion matrix plot <!-- {{< fa check >}} -->
-- Add parameters to custom tests <!-- {{< fa check >}} -->
-- Pass parameters to custom tests <!-- {{< fa check >}} -->
-- Log the confusion matrix results <!-- {{< fa check >}} -->
-- Using external test providers <!-- {{< fa check >}} -->
-- Initializing a local test provider <!-- {{< fa check >}} -->
+- Implement, run, and log custom inline and reusable tests
+- Refresh your template to include inserted test-driven blocks
+- Configure your template to include custom tests
 :::
 
 ::: {.w-50-ns}
-#### <sup>Module 4</sup><br> Finalize Testing & Documentation
+#### <sup>Module 4</sup><br> Finalizing Model Documentation
 
-- Include custom test results in your documentation <!-- {{< fa check >}} -->
-- Viewing and updating the configuration for the entire model documentation template <!-- {{< fa check >}} -->
-- Update the config <!-- {{< fa check >}} -->
+- Refine your model documentation
+- Submit your model documentation for approval
+- Track changes and other updates to your model
 :::
 
 ::::
@@ -100,58 +76,41 @@ As a developer who is new to ValidMind, learn how to generate model documentatio
 
 ### Validator Fundamentals
 
-As a validator who is new to ValidMind, learn how to review model documentation, prepare your validation report, track issues, and submit your report for approval.
-
-::: {.attn .hidden}
-
 :::: {.flex .flex-wrap .justify-around}
 
-::: {.w-30-ns}
-{{< fa check >}} **Course content**
+::: {.w-80-ns}
+Learn how to use {{< var vm.product >}} as a **validator** to generate validation reports, automate testing, and collaborate with your model development team.
 
-- Split 2 modules -> 3 modules
-- Add missing content:
-   - Preview templates for validation reports
-   - How to work with validation reports
-  - Expand process overview content
 :::
 
-::: {.w-30-ns}
-{{< fa minus >}} **Video** 
+::: {.w-20-ns .tc}
+[register now](/training/validator-fundamentals/validator-fundamentals-register.qmd){.button-green .cta target="_blank"}
 
-- 5 videos
-- Replace stale '101' intro
-- Review for stale content
-:::
-
-::: {.w-30-ns}
-<!-- **Notes**
-
-- TBD -->
 :::
 
 ::::
-:::
 
 ::: {.attn}
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-50-ns}
-#### <sup>Module 1</sup><br> Reviewing & Analyzing Models 
+#### <sup>Module 1</sup><br> Using {{< var vm.product >}} for Model Validation
 
-- Access validation reports <!-- {{< fa check >}} -->
-- Preview templates for validation reports <!-- {{< fa x >}} -->
-- How to work with validation reports <!-- {{< fa x >}} -->
+- Install the {{< var validmind.developer >}} in your environment
+- Connect to a champion model as a validator
+- Preview the model's validation report template
+- Review submitted model documentation
+
 :::
 
 ::: {.w-50-ns}
-#### <sup>Module 2</sup><br> Reviewing & Analyzing Models 
+#### <sup>Module 2</sup><br> Running Data Quality Tests
 
-- Reviewing model documentation <!-- {{< fa check >}} -->
-- Analyzing test results <!-- {{< fa check >}} -->
-- Add findings <!-- {{< fa check >}} -->
-- Link evidence <!-- {{< fa check >}} -->
-- Assessing compliance <!-- {{< fa check >}} -->
+- Identify relevant tests to run from {{< var vm.product >}}'s test vault
+- Initialize datasets for use with the {{< var validmind.developer >}}
+- Run and log out-of-the-box tests on your datasets
+- Insert test results into your model’s validation report
+
 :::
 
 ::::
@@ -159,13 +118,20 @@ As a validator who is new to ValidMind, learn how to review model documentation,
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-50-ns}
-#### <sup>Module 3</sup><br> Issue Resolution & Submission
+#### <sup>Module 3</sup><br> Developing Challenger Models
 
-- Tracking issue resolution <!-- {{< fa check >}} -->
-- Submitting validation reports for approval <!-- {{< fa check >}} -->
+- Initialize models for use with the {{< var validmind.developer >}}
+- Run and log out-of-the box and custom tests for your models
+- Use the results of tests to log model findings
+
 :::
 
 ::: {.w-50-ns}
+#### <sup>Module 4</sup><br> Finalizing Validation Reports
+
+- Make qualitative edits to your validation report
+- Submit your validation report for approval
+- Track finding resolution and other updates to your model
 
 :::
 
@@ -174,7 +140,19 @@ As a validator who is new to ValidMind, learn how to review model documentation,
 
 ### Administrator Fundamentals
 
-As an administrator who is new to ValidMind, learn how to onboard your organization, manage users and roles, and manage permissions for specific roles.
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-80-ns}
+Learn how to use {{< var vm.product >}} as an **administrator** to onboard your organization, manage users, roles, and permissions, and customize the {{< var vm.platform >}} for your institution's requirements.
+
+:::
+
+::: {.w-20-ns .tc}
+[register now](/training/administrator-fundamentals/administrator-fundamentals-register.qmd){.button-green .cta target="_blank"}
+
+:::
+
+::::
 
 ::: {.attn .hidden}
 
@@ -211,7 +189,7 @@ As an administrator who is new to ValidMind, learn how to onboard your organizat
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-50-ns}
-#### <sup>Module 1</sup><br> Onboarding
+#### <sup>Module 1</sup><br> {{< var validmind.platform >}} Onboarding
 
 - Setting up an organization <!-- {{< fa check >}} -->
 - Inviting users via email <!-- {{< fa check >}} -->
@@ -229,14 +207,14 @@ As an administrator who is new to ValidMind, learn how to onboard your organizat
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-50-ns}
-#### <sup>Module 3</sup><br> Workflows
+#### <sup>Module 3</sup><br> Lifecycle Statuses & Workflows
 
-- Configuring workflows <!-- {{< fa minus >}} -->
+- Configuring statuses & workflows <!-- {{< fa minus >}} -->
 - Assigning users to workflows <!-- {{< fa minus >}} -->
 :::
 
 ::: {.w-50-ns}
-#### <sup>Module 4</sup><br> Templates & Model Inventory
+#### <sup>Module 4</sup><br> Templates & Inventory Fields
 
 - Customize templates <!-- {{< fa check >}} -->
 - Configure model inventory fields <!-- {{< fa x >}} -->
@@ -247,7 +225,20 @@ As an administrator who is new to ValidMind, learn how to onboard your organizat
 
 ### Monitoring Fundamentals <br>[coming soon]{.smallercaps .pink}
 
-As a monitoring user who is new to ValidMind, learn how to generate ongoing monitoring documentation, schedule monitoring runs, and review the results.
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-80-ns}
+Learn how to use {{< var vm.product >}} to manage the **ongoing monitoring** of your models with ongoing monitoring plans, scheduled monitoring runs, and tracked metrics over time.
+
+:::
+
+::: {.w-20-ns .tc}
+[coming soon]{.button .cta target="_blank"}
+
+:::
+
+::::
+
 
 ::: {.attn .hidden}
 :::: {.flex .flex-wrap .justify-around}
@@ -278,7 +269,7 @@ As a monitoring user who is new to ValidMind, learn how to generate ongoing moni
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-50-ns}
-#### <sup>Module 1</sup><br> Ongoing Monitoring of Models
+#### <sup>Module 1</sup><br> Using {{< var vm.product >}} for Ongoing Monitoring
 
 - How monitoring integrates with model documentation <!-- {{< fa x >}} -->
 - Enable monitoring for a model <!-- {{< fa check >}} -->
@@ -286,7 +277,7 @@ As a monitoring user who is new to ValidMind, learn how to generate ongoing moni
 :::
 
 ::: {.w-50-ns}
-#### <sup>Module 2</sup><br> Monitoring Setup
+#### <sup>Module 2</sup><br> Setting Up Monitoring
 
 - Load the reference and monitoring datasets <!-- {{< fa check >}} -->
 - Load the production model <!-- {{< fa check >}} -->
@@ -315,11 +306,24 @@ As a monitoring user who is new to ValidMind, learn how to generate ongoing moni
 
 ## Standalone courses
 
-Useful skills for anyone who wants to use ValidMind. 
+Useful skills for anyone who wants to use {{< var vm.product >}}. 
 
 ### {{< var vm.product >}} Guided Tour <br>[coming soon]{.smallercaps .pink}
 
-As a new user of ValidMind, learn how to navigate the platform's key features and understand how they work together to support AI governance and compliance with regulations like the EU AI Act.
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-80-ns}
+Learn how to navigate the {{< var vm.product >}}'s key features and understand how they work together to support AI governance and compliance with regulations like the EU AI Act.
+
+:::
+
+::: {.w-20-ns .tc}
+[coming soon]{.button .cta target="_blank"}
+
+:::
+
+::::
+
 
 ::: {.attn .hidden}
 
@@ -354,7 +358,7 @@ As a new user of ValidMind, learn how to navigate the platform's key features an
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-50-ns}
-#### <sup>Module 1</sup><br> Getting Started with the Model Inventory
+#### <sup>Module 1</sup><br> The {{< var vm.product >}} Model Inventory
 
 - Understand how the model inventory serves as your central hub for registered models <!-- {{< fa check >}} -->
 - Learn to register new models with appropriate templates <!-- {{< fa check >}} -->
@@ -363,7 +367,7 @@ As a new user of ValidMind, learn how to navigate the platform's key features an
 :::
 
 ::: {.w-50-ns}
-#### <sup>Module 2</sup><br> Model Documentation and Testing
+#### <sup>Module 2</sup><br> Model Documentation & Testing
 
 - Navigate the documentation templates and structure <!-- {{< fa check >}} -->
 - Explore the library of 250+ out-of-the-box tests <!-- {{< fa check >}} -->
@@ -376,7 +380,7 @@ As a new user of ValidMind, learn how to navigate the platform's key features an
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-50-ns}
-#### <sup>Module 3</sup><br> Validation and Collaboration
+#### <sup>Module 3</sup><br> Validation & Collaboration
 
 - Create and manage validation reports <!-- {{< fa check >}} -->
 - Learn to assess compliance and link evidence <!-- {{< fa check >}} -->
@@ -385,7 +389,7 @@ As a new user of ValidMind, learn how to navigate the platform's key features an
 :::
 
 ::: {.w-50-ns}
-#### <sup>Module 4</sup><br> Monitoring and Governance
+#### <sup>Module 4</sup><br> Monitoring & Governance
 
 - Set up ongoing monitoring for production models <!-- {{< fa check >}} -->
 - Track model performance and identify data drift <!-- {{< fa check >}} -->
@@ -398,7 +402,20 @@ As a new user of ValidMind, learn how to navigate the platform's key features an
 
 ### {{< var vm.product >}} Content Features <br>[coming soon]{.smallercaps .pink}
 
-As a content author who is new to ValidMind, learn how to use the content features to enhance my documentation, and to enable or disable text generation with GenAI.
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-80-ns}
+Learn how to use {{< var vm.product >}}'s content features to enhance documentation, and to enable or disable text generation with GenAI.
+
+:::
+
+::: {.w-20-ns .tc}
+[coming soon]{.button .cta target="_blank"}
+
+:::
+
+::::
+
 
 ::: {.attn .hidden}
 
@@ -430,14 +447,14 @@ As a content author who is new to ValidMind, learn how to use the content featur
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-50-ns}
-#### <sup>Module 1</sup><br> Using text generation
+#### <sup>Module 1</sup><br> Using Text Generation
 
 - When to use GenAI to draft content <!-- {{< fa x >}} -->
 - How to turn GenAI on and off <!-- {{< fa x >}} -->
 ::: 
 
 ::: {.w-50-ns}
-#### <sup>Module 2</sup><br> Enhancing content
+#### <sup>Module 2</sup><br> Enhancing Content
 
 - How to edit content <!-- {{< fa x >}} -->
 - Write optional assessment prompts <!-- {{< fa x >}} -->
