--- a/site/training/program/program-overview.qmd
+++ b/site/training/program/program-overview.qmd
@@ -20,7 +20,7 @@ listing:
     - sample-training-plan.qmd
 ---
 
-Empower your team with ValidMind's comprehensive training program, designed to accelerate adoption and maximize value.
+Empower your team with {{< var vm.product >}}'s comprehensive training program, designed to accelerate adoption and maximize value.
 
 ::: {.attn}
 ## {{< fa check >}}  Training that delivers
@@ -35,7 +35,7 @@ Our training program is built on three pillars:
 
 ## Invest in your success
 
-ValidMind's training program ensures your organization can:
+{{< var vm.product >}}'s training program ensures your organization can:
 
 - Accelerate time-to-value with structured learning paths
 - Build internal expertise across key roles
@@ -134,6 +134,6 @@ Our training develops competency across your entire model risk management team:
 ::: {.feature}
 ## Get started
 
-Ready to begin your ValidMind training journey? Contact your customer success representative to create a customized training plan for your organization.
+Ready to begin your {{< var vm.product >}} training journey? Contact your customer success representative to create a customized training plan for your organization.
 
 :::
