--- a/site/training/program/sample-training-plan.qmd
+++ b/site/training/program/sample-training-plan.qmd
@@ -4,7 +4,7 @@ sidebar: validmind-training
 description: "Sample 3-week training plan for enterprise deployment with enhanced support options."
 ---
 
-This enterprise training plan demonstrates how ValidMind can be deployed across a large organization using both standard and enhanced training options. The plan includes comprehensive role-based training, custom workshops, and ongoing support to ensure successful adoption.
+This enterprise training plan demonstrates how {{< var vm.product >}} can be deployed across a large organization using both standard and enhanced training options. The plan includes comprehensive role-based training, custom workshops, and ongoing support to ensure successful adoption.
 
 ## Timeline overview
 
@@ -64,7 +64,7 @@ This enterprise training plan demonstrates how ValidMind can be deployed across 
 
 | Module | Format | Duration | Delivery |
 |--------|---------|----------|-----------|
-| ValidMind 101 | Live + Labs | 2 hours | Regional tracks |
+| {{< var vm.product >}} 101 | Live + Labs | 2 hours | Regional tracks |
 | Developer foundations | Interactive | 4 hours | Role-specific |
 | Validator essentials | Interactive | 4 hours | Role-specific |
 | Admin core skills | Interactive | 4 hours | Role-specific |
@@ -125,6 +125,6 @@ This enterprise training plan demonstrates how ValidMind can be deployed across 
 3. Complete pre-training assessments
 4. Begin foundation phase rollout
 
-Contact your ValidMind representative to customize this plan for your organization's specific needs and timeline requirements.
+Contact your {{< var vm.product >}} representative to customize this plan for your organization's specific needs and timeline requirements.
 
 :::
