--- a/site/training/program/training-faq.qmd
+++ b/site/training/program/training-faq.qmd
@@ -3,7 +3,7 @@ title: "Where do I find &hellip; ?"
 sidebar: validmind-training
 ---
 
-Here's what we have been asked about ValidMind during training sessions. 
+Here's what we have been asked about {{< var vm.product >}} during training sessions. 
 
 ## Answers by topic
 
