--- a/site/training/training-templates/course-registration.qmd
+++ b/site/training/training-templates/course-registration.qmd
@@ -4,9 +4,49 @@ subtitle: For {{< var vm.product >}}
 date: last-modified
 # REMOVE THE SEARCH FALSE TOGGLE WHEN THE COURSE IS READY TO BE PUBLISHED
 search: false
+listing:
+  - id: modules
+    type: grid
+    grid-columns: 2
+    max-description-length: 500
+    sort: false
+    table-hover: true
+    image-align: left
+    contents:
+    # IMPORTANT: USE THE .HTML PATH AND NOT THE .QMD PATH FOR THE REVEALJS OUTPUT
+    - path: course-slides.html
+      title: "Title one"
+      subtitle: "Module 1"
+      description: "{{< fa check >}} Bullet 1 <br> {{< fa check >}} Bullet 2 <br> {{< fa check >}} Bullet 3 <br> {{< fa check >}} Bullet 4 <br> {{< fa check >}} Bullet 5"
+      reading-time: "30"
+      author: "{{< var vm.product >}}"
+    - path: course-slides.html
+      title: "Title two"
+      subtitle: "Module 2"
+      description: "{{< fa check >}} Bullet 1 <br> {{< fa check >}} Bullet 2 <br> {{< fa check >}} Bullet 3 <br> {{< fa check >}} Bullet 4 <br> {{< fa check >}} Bullet 5"
+      reading-time: "30"
+      author: "{{< var vm.product >}}"
+    - path: course-slides.html
+      title: "Title 3"
+      subtitle: "Module 3"
+      description: "{{< fa check >}} Bullet 1 <br> {{< fa check >}} Bullet 2 <br> {{< fa check >}} Bullet 3 <br> {{< fa check >}} Bullet 4 <br> {{< fa check >}} Bullet 5"
+      reading-time: "30"
+      author: "{{< var vm.product >}}"
+    - path: course-slides.html
+      title: "Title 4"
+      subtitle: "Module 4"
+      description: "{{< fa check >}} Bullet 1 <br> {{< fa check >}} Bullet 2 <br> {{< fa check >}} Bullet 3 <br> {{< fa check >}} Bullet 4 <br> {{< fa check >}} Bullet 5"
+      reading-time: "30"
+      author: "{{< var vm.product >}}"
+    fields: [title, subtitle, description, reading-time]
 ---
 
-As a {{ role }} new to {{< var vm.product >}}, learn how to {{ course_overview }}.
+Learn how to use {{< var vm.product >}} as a {{ role }}, to {{ list_tasks }}.
+
+::: {.column-margin}
+{{< include /training/_compatibility.qmd >}}
+
+:::
 
 <!-- COURSE CARD -->
 ::: {.attn}
@@ -15,30 +55,22 @@ As a {{ role }} new to {{< var vm.product >}}, learn how to {{ course_overview }
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-50-ns .pr3}
-### Learn how to
-
-- {{ learning_point_1 }}
-- {{ learning_point_2 }}
-- {{ learning_point_3 }}
-- {{ learning_point_4 }}
-- {{ learning_point_5 }}
-- {{ learning_point_6 }}
-
-#### Duration 
+#### Total duration
 
 {{ duration }} minutes
 
-[register](#register){.button-green .cta}
 :::
 
-::: {.w-50-ns .pa3}
+::: {.w-50-ns .pa3 .tr}
 
-::: {.preview source="course-slides.qmd"}
-:::
+[register now](#register){.button-green .cta}
 
 :::
 
 ::::
+
+:::{#modules}
+:::
 
 :::
 
