--- a/site/training/validator-fundamentals/validator-fundamentals-register.qmd
+++ b/site/training/validator-fundamentals/validator-fundamentals-register.qmd
@@ -6,7 +6,12 @@ aliases:
   - training-for-model-validators.html
 ---
 
-As a validator who is new to {{< var vm.product >}}, learn how to review model documentation, prepare your validation report, track issues, and submit your report for approval.
+Learn how to use {{< var vm.product >}} as a **validator** to generate validation reports, automate testing, and collaborate with your model development team.
+
+::: {.column-margin}
+{{< include /training/_compatibility.qmd >}}
+
+:::
 
 <!-- COURSE CARD -->
 ::: {.attn}
