--- a/site/guide/model-documentation/work-with-content-blocks.qmd
+++ b/site/guide/model-documentation/work-with-content-blocks.qmd
@@ -5,9 +5,9 @@ aliases:
   - /guide/work-with-content-blocks.html
 ---
 
-Make edits to your model documentation, validation reports, or ongoing monitoring plans by adding or removing content blocks directly in the online editor. 
+Make edits to your model documentation, validation reports, or ongoing monitoring plans by adding or removing content blocks directly in the online editor.
 
-## What are content blocks? 
+## What are content blocks?
 
 Content blocks provide you with sections that are part of a template, and are used in model documentation, validation reports, and ongoing monitoring plans.
 
@@ -90,24 +90,9 @@ Generating content drafts for your model documentation works best after you've l
 
 While editing a simple text block, you can have {{< var vm.product >}} assist you with generating content drafts:
 
-1. Click **{{< fa diamond >}} <sup>[beta]{.smallcaps}</sup> (Generate Text with AI)** in the toolbar while editing a content block.
+{{< include content_blocks/_generate-with-ai.qmd >}}
 
-2. Enter an optional prompt to guide the output, then click **{{< fa check >}} Generate** to compose a draft for review.  
-
-3. Review the draft composed by the {{< var vm.product >}} AI Content Builder for accuracy and relevance, then:
-
-   - Click **{{< fa download >}} Accept Text** to insert the draft into your content block.
-   - Click **{{< fa rotate >}} Try Again** to regenerate a different draft.g
-   - Click **Cancel** to discard the draft and return to your documentation section. 
-
-4. After you insert the AI-generated draft, click on the text box to make the necessary edits and adjustments to your copy:
-
-   - Ensure that content is in compliance with the quality guidelines outlined by your organization. 
-   - Use the content editing toolbar[^9] just as you would with any other text block.
-
-![Generating content with AI within a simple text block](generate-with-ai.gif){width=90% fig-alt="An animation that showcases the Generate with AI feature within a simple text block" .screenshot}
-
-When generating content drafts with AI, accepted versions and edits are retained in your {{< fa wifi >}} Model Activity[^10] just like other updates to your documentation, reports, or plans. 
+When generating content drafts with AI, accepted versions and edits are retained in your {{< fa wifi >}} Model Activity[^9] just like other updates to your documentation, reports, or plans. 
 
 
 ## Remove content blocks
@@ -118,7 +103,7 @@ Test-driven or metric over time blocks can be re-added later on but **text block
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.[^11]
+2. Select a model or find your model by applying a filter or searching for it.[^10]
 
 3. In the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**, **{{< fa shield >}} Validation Report**, or **{{< fa desktop >}} Ongoing Monitoring**.
 
@@ -165,8 +150,6 @@ Test-driven or metric over time blocks can be re-added later on but **text block
 
 [^8]: [Run tests and test suites](/developer/model-testing/testing-overview.qmd)
 
-[^9]: [Content editing toolbar](#content-editing-toolbar)
+[^9]: [View model activity](/guide/model-inventory/view-model-activity.qmd)
 
-[^10]: [View model activity](/guide/model-inventory/view-model-activity.qmd)
-
-[^11]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^10]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
