--- a/site/training/training-templates/course-slides.qmd
+++ b/site/training/training-templates/course-slides.qmd
@@ -1,6 +1,6 @@
 ---
-title: "{{ Topic }} <br>Template"
-subtitle: "docs.validmind.ai/training<br><br>_Click [{{< fa chevron-right >}}](#learning-objectives) to start_"
+title: "{{ Module }} <br>Template"
+subtitle: "{{Course name}} — Module # of #<br><br>_Click [{{< fa chevron-right >}}](#learning-objectives) to start_"
 lightbox: true
 # REMOVE THE SEARCH FALSE TOGGLE WHEN THE COURSE IS READY TO BE PUBLISHED
 search: false
@@ -28,11 +28,33 @@ title-slide-attributes:
 skip_preview: true
 ---
 
-# Learning objectives
+# Learning objectives {.center}
 
-_"As a {{ role }} who is new to {{< var vm.product >}}, I want to learn how to {{ task A }}, {{ task B }}, {{ task C }}, and {{ task D}}."_
+_"As a {{ role }} who ... {{< var vm.product >}}, I want to learn how to {{ task A }}, {{ task B }}, {{ task C }}, and {{ task D}}."_
 
-## In this course
+::: {.tc}
+<br>
+This {{#th}} module is part of a {{#}}-part series:
+<br><br>
+<!-- CHANGE TO YOUR ACTUAL COURSE REGISTRATION PAGE -->
+[Course Link](/training/training-templates/course-registration.qmd){.button target="_blank"}
+:::
+
+## In this course {.center}
+
+:::: {.columns .f4}
+::: {.column width="50%" .mt4 .pr4}
+### Introduction
+- [Before you begin](#before-you-begin)
+
+:::
+
+::::
+
+:::: {.columns .f4}
+
+::: {.column width="50%" .mt4 .pr4}
+### Section 1
 
 1. [iFrame embed right](#iframe-embed-right)
 2. [iFrame embed bottom](#iframe-embed-bottom)
@@ -40,26 +62,77 @@ _"As a {{ role }} who is new to {{< var vm.product >}}, I want to learn how to {
 4. [Scrollable single user guide](#scrollable-single-user-guide)
 5. [Scrollable tabset user guides](#scrollable-tabset-user-guide)
 
+:::
+
+::: {.column width="50%" .mt4}
+### Section 2
+
+Example embedded `iframe` for interactive copy/paste workaround:
+
+- [Get your code snippet](#get-your-code-snippet)
+
+Topic summary & next steps:
+
+- [Next steps](#next-steps)
+:::
+
+::::
+
 First, let's make sure you can log in to {{< var vm.product >}}.
 
 {{< include /training/assets/_revealjs-navigation.qmd >}}
 
-## Can you log in?
+## Before you begin {.center}
 
-<!-- CHANGE THIS LINK OUT TO THE COURSE'S REGISTRATION PAGE & UPDATE THE ROLE/ROLE ICON -->
+::: {.panel-tabset}
 
-To try out this course, you need to have been [onboarded](course-registration.qmd#register) onto {{< var validmind.training >}} with the [**{{< fa check >}} Role Name**]{.bubble} role.
+### Registration
 
-<br>Log in to check your access:
+<!-- CHANGE THIS TO THE ROLE ICON AND REGISTRATION PAGE -->
 
-::: {.tc}
-[Log in to {{< var vm.product >}}](https://app.prod.validmind.ai/){.button target="_blank"}
+To continue, you need to have been [onboarded](course-registration.qmd#register){target="_blank"} onto {{< var validmind.training >}} with the [**{{< fa check >}} Role Name**]{.bubble} role.
 
 <br>
-Be sure to return to this page afterwards.
+
+:::: {.tc .mt5 .f2 .embed}
+Already logged in and refreshed this module? Click [{{< fa chevron-right >}}]() to continue.
 
 :::
 
+### Log in
+
+1. Log in to check your access:
+
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-50-ns .tc}
+
+[Log in to JupyterHub](https://jupyterhub.validmind.ai/){.button target="_blank"}
+
+:::
+
+::: {.w-50-ns .tc}
+[Log in to {{< var vm.product >}}](https://app.prod.validmind.ai){.button target="_blank"}
+:::
+
+::::
+
+
+::: {.tc .f3}
+Be sure to return to this page afterwards.
+:::
+
+2. After you successfully log in, refresh the page to connect this training module up to the {{< var validmind.platform >}}: 
+
+::: {.tc}
+<button class="button" onClick="window.location.reload();">Refresh Page</button>
+
+:::
+
+
+:::
+
+# Section 1 {background-color="#083E44" background-image="/assets/img/about-us-esphere.svg"}
 
 # iFrame embed right {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
@@ -156,11 +229,11 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis sapien blandit
 # Scrollable tabset user guides {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 <!-- USE `.scrollable` IN AN H2  -->
-## {.scrollable}
+## {.scrollable .center}
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-You can also embed several sets of instructions into the same two-column layout. 
+You can also embed several sets of instructions into the same two-column layout, and vertically center content. 
 
 ::: {.tc}
 <!-- CHANGE THIS TO THE EXTERNAL USER GUIDE LINK -->
@@ -191,16 +264,86 @@ All you need to do is make sure that the headers within `.panel-tabset` are set 
 <!-- YOU MIGHT NEED TO MOVE THIS TO THE BOTTOM OF THE LEFT COLUMN -->
 Try it **live** on the next page. {{< fa hand-point-right >}}
 
+# Section 2 {background-color="#083E44" background-image="/assets/img/about-us-esphere.svg"}
 
-# Topic summary slide
+## Get your code snippet
 
-Summarize the benefits of {{< var vm.product >}} for the role or topic you just covered here, then link to the relevant user guides below.
+:::: {.columns}
+
+::: {.column width="80%"}
+
+<!-- FOR COPYING THE CODE SNIPPET WE NEED TO USE THIS IFRAME WORKAROUND -->
+
+<div style="zoom: 0.6; overflow: hidden;">
+  <iframe 
+    src="https://app.prod.validmind.ai/model-inventory" 
+    width="100%" 
+    height="750" 
+    style="border: 1px solid #083E44; border-radius: 8px; border-right-width: 2px; border-bottom-width: 3px;"
+    data-preload="yes" 
+    sandbox="allow-same-origin allow-scripts allow-popups allow-forms"
+    allow="clipboard-read; clipboard-write">
+  </iframe>
+</div>
+
+:::
+
+::: {.column width="20%" .f4}
+
+::: {.f5}
+{{< var vm.product >}} generates a unique *code snippet* for each registered model to connect with your developer environment:
+
+1. From the **{{< fa cubes >}} Inventory**, select the name of your model to open up the model details page.
+2. On the left sidebar that appears for your model, click **Getting Started**.
+3. Locate the code snippet and click **Copy snippet to clipboard**.
+
+:::
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
+
+:::
+
+::::
+
+:::: {.tc .f6 .embed}
+**Can't load the {{< var validmind.platform >}}?**
+
+Make sure you're logged in and have refreshed the page in a Chromium-based web browser.
+
+:::
+
+# In summary {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+
+## {.scrollable .center}
+
+:::: {.columns}
+::: {.column width="30%" .pr4 .f2}
+{{Module name}}
+
+::: {.f3}
+<br>Want to learn more? Find your next learning resource on [{{< fa graduation-cap >}} {{< var validmind.training >}}](/training/training.qmd){target="_blank"}.
+
+:::
+
+:::
+
+::: {.column width="70%" .bl .pl4 .f3}
+In this {{#th}} module, you learned how to:
+
+- [x] task
+- [x] task
+- [x] task
+- [x] task
+
+:::
+::::
+
+::: {.f2}
+<br>
+There is more that {{< var vm.product >}} can do to help you {{perform task}}, including {{...}}:
+:::
 
 ::: {.tc}
-<!-- CHANGE THIS TO THE RELEVANT USER GUIDE SECTION -->
+[More docs](/index.qmd){.button target="_blank"}
 
-[Change this link and text](/guide/guides.qmd){.button target="_blank"}
 :::
-<br>
-
-Or, find your next learning resource on [{{< var validmind.training >}}](/training/training.qmd).
