--- a/site/guide/model-documentation/work-with-content-blocks.qmd
+++ b/site/guide/model-documentation/work-with-content-blocks.qmd
@@ -55,9 +55,9 @@ Use {{< var vm.product >}} to assist you with generating content via AI!^[[Gener
 
 6. Click {{< fa square-plus >}} and then select one of the available options:
 
-   a. [new]{.smallcaps} —
+   a. [new]{.smallcaps}:
       - **Text Block** — Adds a new section with a blank content block.
-   b. [from library]{.smallcaps} —
+   b. [from library]{.smallcaps}:
       - **Text Block** — Inserts a text block from a template in your block library.[^5] Select reusable blocks you want to add, then click **Insert # Text Block(s) to Document**.
       - **Test-Driven**[^6] — Adds a new section with logged test results.
       - **Metric Over Time**[^7] — Adds a new section with logged metric over time results.
