Generate with AI adjust

--- a/site/guide/model-documentation/content_blocks/_generate-with-ai.qmd
+++ b/site/guide/model-documentation/content_blocks/_generate-with-ai.qmd
@@ -2,13 +2,12 @@
 :::: {.content-visible unless-format="revealjs"}
 1. Click **{{< fa diamond >}} <sup>[beta]{.smallcaps}</sup> (Generate Text with AI)** in the toolbar while editing a content block.
 
-1. Enter an optional prompt to guide the output, then click **{{< fa check >}} Generate** to compose a draft for review.  
+1. Enter an optional prompt to guide the output, then click **Generate Content** to compose a draft for review.
 
 1. Review the draft composed by the {{< var vm.product >}} AI Content Builder for accuracy and relevance, then:
 
-   - Click **{{< fa download >}} Accept Text** to insert the draft into your content block.
-   - Click **{{< fa rotate >}} Try Again** to regenerate a different draft.
-   - Click **Cancel** to discard the draft and return to your documentation section. 
+   - Click **{{< fa download >}} Insert to document** to add the draft into your content block.
+   - Or, submit a different prompt in the dialogue box and click **Send** to regenerate a different draft.
 
 1. After you insert the AI-generated draft, click on the text box to make the necessary edits and adjustments to your copy:
 
@@ -23,13 +22,12 @@
 :::: {.content-hidden unless-format="revealjs"}
 1. Click **{{< fa diamond >}} <sup>[beta]{.smallcaps}</sup> (Generate Text with AI)** in the toolbar while editing a content block.
 
-1. Enter an optional prompt to guide the output, then click **{{< fa check >}} Generate** to compose a draft for review.
+1. Enter an optional prompt to guide the output, then click **Generate Content** to compose a draft for review.
 
 1. Review the draft composed by the {{< var vm.product >}} AI Content Builder for accuracy and relevance, then:
 
-   - Click **{{< fa download >}} Accept Text** to insert the draft into your content block.
-   - Click **{{< fa rotate >}} Try Again** to regenerate a different draft.
-   - Click **Cancel** to discard the draft and return to your documentation section.
+   - Click **{{< fa download >}} Insert to document** to add the draft into your content block.
+   - Or, submit a different prompt in the dialogue box and click **Send** to regenerate a different draft.
 
 1. After you insert the AI-generated draft, click on the text box to make the necessary edits and adjustments to your copy, ensure that content is in compliance with the quality guidelines outlined by your organization.
 
