--- a/site/guide/model-documentation/work-with-content-blocks.qmd
+++ b/site/guide/model-documentation/work-with-content-blocks.qmd
@@ -58,7 +58,7 @@ Use {{< var vm.product >}} to assist you with generating content via AI!^[[Gener
    a. [new]{.smallcaps}:
       - **Text Block** — Adds a new section with a blank content block.
    b. [from library]{.smallcaps}:
-      - **Text Block** — Inserts a text block from a template in your block library.[^5] Select reusable blocks you want to add, then click **Insert # Text Block(s) to Document**.
+      - **Text Block** — Inserts a text block from a template in your block library.[^5] Select the reusable blocks you want to add, then click **Insert # Text Block(s) to Document**.
       - **Test-Driven**[^6] — Adds a new section with logged test results.
       - **Metric Over Time**[^7] — Adds a new section with logged metric over time results.
 
@@ -95,23 +95,7 @@ While editing a simple text block, you can have {{< var vm.product >}} assist yo
 
 {{< include content_blocks/_generate-with-ai.qmd >}}
 
-2. Enter an optional prompt to guide the output, then click **{{< fa check >}} Generate** to compose a draft for review.  
-
-3. Review the draft composed by the {{< var vm.product >}} AI Content Builder for accuracy and relevance, then:
-
-   - Click **{{< fa download >}} Accept Text** to insert the draft into your content block.
-   - Click **{{< fa rotate >}} Try Again** to regenerate a different draft.g
-   - Click **Cancel** to discard the draft and return to your documentation section. 
-
-4. After you insert the AI-generated draft, click on the text box to make the necessary edits and adjustments to your copy:
-
-   - Ensure that content is in compliance with the quality guidelines outlined by your organization. 
-   - Use the content editing toolbar[^10] just as you would with any other text block.
-
-![Generating content with AI within a simple text block](generate-with-ai.gif){width=90% fig-alt="An animation that showcases the Generate with AI feature within a simple text block" .screenshot}
-
 When generating content drafts with AI, accepted versions and edits are retained in your {{< fa wifi >}} Model Activity[^11] just like other updates to your documentation, reports, or plans. 
-
 
 ## Remove content blocks
 
