Block removal edit

--- a/site/guide/model-documentation/work-with-content-blocks.qmd
+++ b/site/guide/model-documentation/work-with-content-blocks.qmd
@@ -111,20 +111,11 @@ Test-driven or metric over time blocks can be re-added later on but **text block
 
 4. Click on a section header to expand that section and remove content.
 
-5. Select the block you wish to remove from the model documentation.
+5. Locate the block you wish to remove, and hover over it until the block's toolbar appears in the top right-hand corner.
 
-6. Click on {{< fa trash-can >}} located in either one of these locations:
+6. Select **{{< fa trash >}} Delete** to remove the block.
 
-   - In the toolbar for text blocks
-   
-   ![Deleting a content block via the text toolbar](remove-text-block.gif){fig-alt="A gif showing the process of deleting a content block via the text toolbar" .screenshot group="delete"}
-
-   - In the single-button toolbar for test-driven or metric over time blocks
-
-   ![Deleting a content block via the single-button toolbar for test-driven blocks](remove-test-driven-block.gif){fig-alt="A gif showing the process of deleting a content block via the single-button toolbar for test-driven blocks" .screenshot group="delete"}
-
-
-7. After you confirm, the content block is removed. 
+7. After you confirm, the content block will be deleted.
 
 ## What's next
 
